# byor

./: .pre-commit-config.yaml  .typos.toml  Makefile  Office_L.json  README.md  gen_json.py  pyproject.toml  radar.json  requirements.txt  test.json
.config/: .flake8  .typos.toml
.github/workflows/: gen_json.yml  pre-commit.yml
radar/languages_frameworks/: flutter.md  go.md  hcl.md  javascript.md  php.md  python.md  ruby.md  rust.md
radar/techniques/: githook.md  iac.md  lint.md  monitoring.md  oidc4github.md  test1st.md  validate.md
radar/tools/: ansible.md  aqua.md  brew.md  docker.md  make.md  pre-commit.md  runme.md  taskfiledev.md  terraform.md
