[project]
name = "byor"
version = "0.1.0"
description = "for byor"
authors = [
    { name = "NISHIMURA Yoshitaka", email = "officel@users.noreply.github.com" }
]
dependencies = [
    "frontmatter>=3.0.8",
    "python-frontmatter>=1.1.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/byor"]

[tool.black]
# 160 is like Ansible
line-length = 160
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.github
  | \.mypy_cache
  | \.tox
  | \.npm
  | \.venv
  | \.direnv
  | _build
  | buck-out
  | build
  | dist
  | node_modules
)/
'''

[tool.isort]
profile = "black"
